--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -11,6 +11,7 @@
    />
    <link rel="stylesheet" href="./styles.css" />
    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
  </head>
  <body>
    <div class="container">
