--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -11,6 +11,7 @@
    />
    <link rel="stylesheet" href="./styles.css" />
    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
  </head>
  <body>
    <div class="container">
@@ -25,14 +26,20 @@
      <div class="content-container">
        <div class="active-users-panel" id="active-user-container">
          <h3 class="panel-title">Active Users:</h3>
+         <!-- <video autoplay class="remote-video" id="remote-video"></video> -->
+         <video autoplay muted class="local-video" id="local-video"></video>
        </div>
        <div class="video-chat-container">
+         <form action="#" id="songSearch">
+           Search for a song:
+          <input type="text">
+          <input id="submitSong" type="submit" value="Search">
+         </form>
          <h2 class="talk-info" id="talking-with-info"> 
            Select active user on the left menu.
          </h2>
          <div class="video-container">
-           <video autoplay class="remote-video" id="remote-video"></video>
-           <video autoplay muted class="local-video" id="local-video"></video>
+           <!-- <iframe width="600" height="400" src="https://www.youtube.com/embed/9_gkpYORQLU?list=PL4p8jNi9Ex5sWqk1m-oQdbTP0jT5T2fFS" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
          </div>
        </div>
      </div>
