Init room and other stuff

--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -25,7 +25,8 @@
      </header>
      <div class="content-container">
        <div class="active-users-panel" id="active-user-container">
-         <h3 class="panel-title">Active Users:</h3>
+         <h3 class="panel-title" id="statusLabel">Active Users:</h3>
+         <button onclick="runKaraoke()">Join Karaoke</button>
        </div>
        <div class="video-chat-container">
          <h2 class="talk-info" id="talking-with-info"> 
