--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -33,15 +33,13 @@
        <div class="video-chat-container">
          <form action="#" id="songSearch">
            Search for a song:
-          <input name="songname" type="text">
+          <input id="songname" name="songname" type="text">
           <input id="submitSong" type="submit" value="Search">
          </form>
          <h2 class="talk-info" id="talking-with-info"> 
            Select active user on the left menu.
          </h2>
-         <div class="video-container">
-           <iframe id="lyricVideo" width="600" height="400" src="https://www.youtube.com/embed/9_gkpYORQLU?list=PL4p8jNi9Ex5sWqk1m-oQdbTP0jT5T2fFS" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         </div>
+           <iframe id="lyricVideo" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
      </div>
    </div>
