--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -37,8 +37,8 @@
           <input id="songname" name="songname" type="text">
           <input id="submitSong" type="submit" value="Search">
          </form>
-
-           <iframe id="lyricVideo" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <button id="start-button" type="button">Start</button>
+         <iframe id="lyricVideo" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
      </div>
    </div>
