--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -28,7 +28,7 @@
        <div class="active-users-panel" id="active-user-container">
          <h3 class="panel-title">Active Users:</h3>
          <!-- <video autoplay class="remote-video" id="remote-video"></video> -->
-         <!-- <video autoplay muted class="local-video" id="local-video"></video> -->
+         <video autoplay class="local-video" id="local-video"></video>
        </div>
        <div class="video-chat-container">
          <h2 class="display-id" id="room-id"></h2>
