--- a/YodlChat/public/vid.html
+++ b/YodlChat/public/vid.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
 </head>
 <body>
     
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
-const PROD = false;
+const PROD = true;
 
 const socket = PROD ? io.connect("https://yodl.aws.andrewarpasi.com") : io.connect("localhost:7007")
 
@@ -27,10 +35,13 @@ socket.on("connect", () => {
 
   socket.on("room_video", body => {
     document.body.innerHTML = body
+    document.getElementById('lyricVideo').width = window.innerWidth;
+    document.getElementById('lyricVideo').height = window.innerHeight;
   })
 
   socket.on("room_start", body => {
-    
+    console.log("Should start video")
+    $("#lyricVideo")[0].src += "?autoplay=1";
   })
 })
 </script>
