--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -32,6 +32,7 @@
        </div>
        <div class="video-chat-container">
          <h2 class="display-id" id="room-id"></h2>
+         <h2 class="display-id" id="room-id-share"></h2>
          <form action="#" id="songSearch">
            Search for a song:
           <input id="songname" name="songname" type="text">
