--- a/YodlChat/public/index.html
+++ b/YodlChat/public/index.html
@@ -34,10 +34,10 @@
          <h2 class="display-id" id="room-id"></h2>
          <form action="#" id="songSearch">
            Search for a song:
-          <input id="songname" name="songname" type="text">
+          <input id="songname" name="songname" type="text" placeholder="search song">
           <input id="submitSong" type="submit" value="Search">
          </form>
-         <button id="start-button" type="button">Start</button>
+         <button id="start-button" type="button">Start session</button>
          <iframe id="lyricVideo" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
      </div>
