--- a/YodlChat/public/vid.html
+++ b/YodlChat/public/vid.html
@@ -42,6 +42,7 @@ socket.on("connect", () => {
   socket.on("room_start", body => {
     console.log("Should start video")
     $("#lyricVideo")[0].src += "?autoplay=1&playsinline=1";
+    socket.disconnect()
   })
 })
 </script>
